@@ -4,3 +4,4 @@
 
 obj-y := printk.o
 obj-y += panic.o
+obj-y += sched.o
