@@ -528,6 +528,7 @@ Sun Feb 21 09:34:09 CST 2016
 
 
 Mon Feb 22 11:04:52 CST 2016
+- [+] kernel/sched.c
 - [+] include/asm-generic/switch_to.h
 - [+] arch/x86/include/asm/switch_to.h
 - [M] arch/x86/kernel/process_32.c
